updated todo task

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -20,26 +19,18 @@
 
             <label class="mode">
                 <input type="checkbox" id="darkModeToggle">
-                <i class='bx bxs-moon'></i>
+                <i id="themeIcon" class='bx'></i>
             </label>
         </div>
     </header>
-
-
-
-
     <section class="container">
         <div class="wrap">
             <label>
-                <input type="text" id="input" placeholder="  enter new task"/>
+                <input type="text" id="input" placeholder=" enter new task"/>
             </label>
             <button id="btn" >Add</button>
             <ul id="result"></ul>
-            <div id="totall">
-                Completed:
-                <span id="completedText"></span>
-            </div>
-            <ul id="completed"></ul>
+            <hr>
         </div>
     </section>
 
