updated todo task

--- a/index.html
+++ b/index.html
@@ -26,12 +26,17 @@
     <section class="container">
         <div class="wrap">
             <label>
+                <a></a>
                 <input type="text" id="input" placeholder=" enter new task"/>
             </label>
             <button id="btn" >Add</button>
+            <div class="text">No tasks</div>
             <ul id="result"></ul>
             <hr>
+            <div class="text2">No completed tasks</div>
+            <ul id="completed"></ul>
         </div>
+
     </section>
 
     <script src="./main.js"></script>
